Fixed footer text misalignment

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -62,7 +62,6 @@ footer {
   width: 100%;
 
   .attribution {
-    vertical-align: top;
     margin-left: 10px;
     font-size: 0.8rem;
     color: #bbb;
